--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <script type="module" src="js/Main.js"></script>
-    <title>Snake</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
+	<title>Snake 2d</title>
 </head>
 <body>
-    <div class="score"></div>
-    <div class= "filed" id="filed">
+    
 
-    </div>
+	<div id="game">
+        <input class="inputPage" type="number" placeholder="1, 2, 3..." required>
+        <input class="inputLimit" type="number" placeholder="1, 2, 3..." required>
+        <button class="btn" type="submit">send</button>
+		<div class="game-header">
+			<div class="game-score">
+				<span class="score-count">1234</span>
+			</div>
+		</div>
+		<div class="canvas-wrapper">
+            <canvas id="filed"></canvas>
+		</div>
+	</div>
+
+	<script src="js/Main.js" type="module"></script>
 </body>
 </html>
