--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     
 
 	<div id="game">
-        <input class="inputPage" type="number" placeholder="1, 2, 3..." required>
-        <input class="inputLimit" type="number" placeholder="1, 2, 3..." required>
-        <button class="btn" type="submit">send</button>
+        <input class="hight" type="number" value="5" placeholder="1, 2, 3..." required>
+        <input class="width" type="number" value="5" placeholder="1, 2, 3..." required>
+        <button class="btn1" type="submit">send</button>
+		<button class="btn2" type="submit">stop</button>
+		<button class="btn3" type="submit">start</button>
 		<div class="game-header">
 			<div class="game-score">
 				<span class="score-count">1234</span>
 			</div>
 		</div>
-		<div class="canvas-wrapper">
-            <canvas id="filed"></canvas>
+		<div id="field">
+           
 		</div>
 	</div>
 
