--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 	<div id="game">
         <input class="hight" type="number" value="5" placeholder="1, 2, 3..." required>
         <input class="width" type="number" value="5" placeholder="1, 2, 3..." required>
-        <button class="btn1" type="submit">send</button>
-		<button class="btn2" type="submit">stop</button>
-		<button class="btn3" type="submit">start</button>
+
+		<button class="btn2" type="submit">Create fill / clear</button>
+		<button class="btn3" type="submit">start / restart</button>
 		<div class="game-header">
 			<div class="game-score">
 				<span class="score-count">1234</span>
+			</div>
+			<div class="game-score">
+				<spanc class="high-score">high sorge</span>
+				<span class="high-score local">33</span>
 			</div>
 		</div>
 		<div id="field">
